// Vitest Snapshot v1

exports[`doIUseEmail() works > getSupportedFeatures() 1`] = `
[
  {
    "link": "https://www.caniemail.com/features/css-background-color/",
    "name": "background-color",
    "notes": [
      "Note about \`background-color\` support for \`orange.desktop-webmail\`: Buggy. Only supports [color keywords from CSS Level 1](https://developer.mozilla.org/en-US/docs/Web/CSS/color_value#color_keywords).",
      "Note about \`background-color\` support for \`orange.ios\`: Buggy. Only supports [color keywords from CSS Level 1](https://developer.mozilla.org/en-US/docs/Web/CSS/color_value#color_keywords).",
      "Note about \`background-color\` support for \`orange.android\`: Buggy. Only supports [color keywords from CSS Level 1](https://developer.mozilla.org/en-US/docs/Web/CSS/color_value#color_keywords).",
    ],
  },
  {
    "link": "https://www.caniemail.com/features/css-background/",
    "name": "background",
    "notes": [
      "Note about \`background\` support for \`orange.desktop-webmail\`: Partial. Does not support the \`/ value\` shorthand for \`background-size\`.",
      "Note about \`background\` support for \`outlook.windows\`: Partial. Only \`background-color\` values are supported.",
      "Note about \`background\` support for \`outlook.windows-mail\`: Partial. Only \`background-color\` values are supported.",
      "Note about \`background\` support for \`yahoo.desktop-webmail\`: Partial. Does not support multiple values. The comma between two values is removed.",
      "Note about \`background\` support for \`yahoo.desktop-webmail\`: Partial. Does not support the \`/ value\` shorthand for \`background-size\`. But it can be used in the \`background-size\` property instead.",
      "Note about \`background\` support for \`yahoo.ios\`: Partial. Does not support multiple values. The comma between two values is removed.",
      "Note about \`background\` support for \`yahoo.ios\`: Partial. Does not support the \`/ value\` shorthand for \`background-size\`. But it can be used in the \`background-size\` property instead.",
      "Note about \`background\` support for \`yahoo.android\`: Partial. Does not support multiple values. The comma between two values is removed.",
      "Note about \`background\` support for \`yahoo.android\`: Partial. Does not support the \`/ value\` shorthand for \`background-size\`. But it can be used in the \`background-size\` property instead.",
      "Note about \`background\` support for \`aol.desktop-webmail\`: Partial. Does not support multiple values. The comma between two values is removed.",
      "Note about \`background\` support for \`aol.desktop-webmail\`: Partial. Does not support the \`/ value\` shorthand for \`background-size\`. But it can be used in the \`background-size\` property instead.",
      "Note about \`background\` support for \`aol.ios\`: Partial. Does not support multiple values. The comma between two values is removed.",
      "Note about \`background\` support for \`aol.ios\`: Partial. Does not support the \`/ value\` shorthand for \`background-size\`. But it can be used in the \`background-size\` property instead.",
      "Note about \`background\` support for \`aol.android\`: Partial. Does not support multiple values. The comma between two values is removed.",
      "Note about \`background\` support for \`aol.android\`: Partial. Does not support the \`/ value\` shorthand for \`background-size\`. But it can be used in the \`background-size\` property instead.",
    ],
  },
  {
    "link": "https://www.caniemail.com/features/css-border/",
    "name": "border",
    "notes": [
      "Note about \`border\` support for \`outlook.windows\`: Partial. A border can not be bigger than 8px.",
      "Note about \`border\` support for \`outlook.windows\`: Buggy. Unreliable if used on a \`<p>\` or a \`<div>\`.",
      "Note about \`border\` support for \`outlook.windows-mail\`: Partial. A border can not be bigger than 8px.",
      "Note about \`border\` support for \`outlook.windows-mail\`: Buggy. Unreliable if used on a \`<p>\` or a \`<div>\`.",
    ],
  },
  {
    "link": "https://www.caniemail.com/features/css-direction/",
    "name": "direction",
    "notes": [
      "Note about \`direction\` support for \`gmail.mobile-webmail\`: Buggy. The client applies an \`rtl\` direction to the entire email if it contains text in a \`rtl\` language.",
    ],
  },
  {
    "link": "https://www.caniemail.com/features/css-display/",
    "name": "display",
    "notes": [
      "Note about \`display\` support for \`gmail.ios\`: Partial. \`flex\`, \`grid\`, \`flow-root\`, \`contents\`, \`inline flow-root\`, \`inline flex\`, \`inline grid\`, \`initial\`, \`revert\`, \`unset\` are not supported with Non Gmail Accounts.",
      "Note about \`display\` support for \`gmail.android\`: Partial. \`flex\`, \`grid\`, \`flow-root\`, \`contents\`, \`inline flow-root\`, \`inline flex\`, \`inline grid\`, \`initial\`, \`revert\`, \`unset\` are not supported with Non Gmail Accounts.",
      "Note about \`display\` support for \`orange.desktop-webmail\`: Partial. \`inline-flex\`, \`inline-grid\`, \`flex\`, \`grid\`, \`flow-root\`, \`contents\`, \`inline flow-root\`, \`inline flex\`, \`inline grid\`, \`initial\`, \`revert\`, \`unset\` values are not supported.",
      "Note about \`display\` support for \`orange.desktop-webmail\`: Buggy. Only the first value is kept with the two-value syntax.",
      "Note about \`display\` support for \`orange.ios\`: Partial. \`inline-flex\`, \`inline-grid\`, \`flex\`, \`grid\`, \`flow-root\`, \`contents\`, \`inline flow-root\`, \`inline flex\`, \`inline grid\`, \`initial\`, \`revert\`, \`unset\` values are not supported.",
      "Note about \`display\` support for \`orange.android\`: Partial. \`inline-flex\`, \`inline-grid\`, \`flex\`, \`grid\`, \`flow-root\`, \`contents\`, \`inline flow-root\`, \`inline flex\`, \`inline grid\`, \`initial\`, \`revert\`, \`unset\` values are not supported.",
      "Note about \`display\` support for \`outlook.windows\`: Buggy. \`display:none\` does not inherit to inner tables.",
      "Note about \`display\` support for \`outlook.windows\`: Partial. Only supports \`display:none\` (but not on \`<img>\`).",
      "Note about \`display\` support for \`outlook.windows-mail\`: Buggy. \`display:none\` does not inherit to inner tables.",
      "Note about \`display\` support for \`outlook.windows-mail\`: Partial. Only supports \`display:none\` (but not on \`<img>\`).",
      "Note about \`display\` support for \`yahoo.desktop-webmail\`: Partial. \`flow-root\`, \`inline-flex\`, \`inline-grid\`, \`inline flow\`, \`contents\`, \`revert\` are not supported.",
      "Note about \`display\` support for \`yahoo.ios\`: Partial. \`flow-root\`, \`inline-flex\`, \`inline-grid\`, \`inline flow\`, \`contents\`, \`revert\` are not supported.",
      "Note about \`display\` support for \`yahoo.android\`: Partial. \`flow-root\`, \`inline-flex\`, \`inline-grid\`, \`inline flow\`, \`contents\`, \`revert\` are not supported.",
      "Note about \`display\` support for \`aol.desktop-webmail\`: Partial. \`flow-root\`, \`inline-flex\`, \`inline-grid\`, \`inline flow\`, \`contents\`, \`revert\` are not supported.",
      "Note about \`display\` support for \`aol.ios\`: Partial. \`flow-root\`, \`inline-flex\`, \`inline-grid\`, \`inline flow\`, \`contents\`, \`revert\` are not supported.",
      "Note about \`display\` support for \`aol.android\`: Partial. \`flow-root\`, \`inline-flex\`, \`inline-grid\`, \`inline flow\`, \`contents\`, \`revert\` are not supported.",
      "Note about \`display\` support for \`fastmail.desktop-webmail\`: Partial. Two-value syntax are combined into a single one with a dash.",
    ],
  },
  {
    "link": "https://www.caniemail.com/features/css-font-weight/",
    "name": "font-weight",
    "notes": [
      "Note about \`font-weight\` support for \`orange.desktop-webmail\`: Partial support. \`<number>\` values are not supported as per CSS Fonts Level 4 where any \`<number>\` value between 1 and 1000 (inclusive) is a valid value. Only the following numeric values are supported: 100, 200, 300, 400, 500, 600, 700, 800, and 900.",
      "Note about \`font-weight\` support for \`outlook.windows\`: Partial support. \`<number>\` values are not supported as per CSS Fonts Level 4 where any \`<number>\` value between 1 and 1000 (inclusive) is a valid value. Only the following numeric values are supported: 100, 200, 300, 400, 500, 600, 700, 800, and 900.",
      "Note about \`font-weight\` support for \`outlook.windows-mail\`: Partial support. \`<number>\` values are not supported as per CSS Fonts Level 4 where any \`<number>\` value between 1 and 1000 (inclusive) is a valid value. Only the following numeric values are supported: 100, 200, 300, 400, 500, 600, 700, 800, and 900.",
      "Note about \`font-weight\` support for \`yahoo.desktop-webmail\`: Partial support. \`<number>\` values are not supported as per CSS Fonts Level 4 where any \`<number>\` value between 1 and 1000 (inclusive) is a valid value. Only the following numeric values are supported: 100, 200, 300, 400, 500, 600, 700, 800, and 900.",
      "Note about \`font-weight\` support for \`yahoo.ios\`: Partial support. \`<number>\` values are not supported as per CSS Fonts Level 4 where any \`<number>\` value between 1 and 1000 (inclusive) is a valid value. Only the following numeric values are supported: 100, 200, 300, 400, 500, 600, 700, 800, and 900.",
      "Note about \`font-weight\` support for \`yahoo.android\`: Partial support. \`<number>\` values are not supported as per CSS Fonts Level 4 where any \`<number>\` value between 1 and 1000 (inclusive) is a valid value. Only the following numeric values are supported: 100, 200, 300, 400, 500, 600, 700, 800, and 900.",
      "Note about \`font-weight\` support for \`aol.desktop-webmail\`: Partial support. \`<number>\` values are not supported as per CSS Fonts Level 4 where any \`<number>\` value between 1 and 1000 (inclusive) is a valid value. Only the following numeric values are supported: 100, 200, 300, 400, 500, 600, 700, 800, and 900.",
      "Note about \`font-weight\` support for \`aol.ios\`: Partial support. \`<number>\` values are not supported as per CSS Fonts Level 4 where any \`<number>\` value between 1 and 1000 (inclusive) is a valid value. Only the following numeric values are supported: 100, 200, 300, 400, 500, 600, 700, 800, and 900.",
      "Note about \`font-weight\` support for \`aol.android\`: Partial support. \`<number>\` values are not supported as per CSS Fonts Level 4 where any \`<number>\` value between 1 and 1000 (inclusive) is a valid value. Only the following numeric values are supported: 100, 200, 300, 400, 500, 600, 700, 800, and 900.",
    ],
  },
  {
    "link": "https://www.caniemail.com/features/css-font/",
    "name": "font shorthand",
    "notes": undefined,
  },
  {
    "link": "https://www.caniemail.com/features/css-letter-spacing/",
    "name": "letter-spacing",
    "notes": [
      "Note about \`letter-spacing\` support for \`outlook.windows\`: Partial. Big negative values are rendered differently from CSS standards.",
      "Note about \`letter-spacing\` support for \`outlook.windows\`: Buggy. Values set in \`em\` are smaller than the expected render in CSS. See [#192](https://github.com/hteumeuleu/caniemail/issues/192).",
      "Note about \`letter-spacing\` support for \`outlook.windows-mail\`: Partial. Big negative values are rendered differently from CSS standards.",
    ],
  },
  {
    "link": "https://www.caniemail.com/features/css-line-height/",
    "name": "line-height",
    "notes": [
      "Note about \`line-height\` support for \`orange.ios\`: Partial. \`normal\` value is not supported.",
      "Note about \`line-height\` support for \`orange.android\`: Partial. \`normal\` value is not supported.",
      "Note about \`line-height\` support for \`outlook.windows\`: Buggy. \`em\` and \`px\` units behave weirdly. Use \`mso-line-height-rule:exactly\`.",
      "Note about \`line-height\` support for \`outlook.windows-mail\`: Buggy. \`em\` and \`px\` units behave weirdly. Use \`mso-line-height-rule:exactly\`.",
    ],
  },
  {
    "link": "https://www.caniemail.com/features/css-list-style-type/",
    "name": "list-style-type",
    "notes": undefined,
  },
  {
    "link": "https://www.caniemail.com/features/css-margin/",
    "name": "margin",
    "notes": [
      "Note about \`margin\` support for \`gmail.desktop-webmail\`: Partial. Negative values are not supported.",
      "Note about \`margin\` support for \`gmail.ios\`: Partial. Negative values are not supported.",
      "Note about \`margin\` support for \`gmail.android\`: Partial. Negative values are not supported.",
      "Note about \`margin\` support for \`gmail.mobile-webmail\`: Partial. Negative values are not supported.",
      "Note about \`margin\` support for \`outlook.windows\`: Partial. Negative values are not supported.",
      "Note about \`margin\` support for \`outlook.windows\`: Partial. Not supported on \`<span>\` and \`<body>\` elements.",
      "Note about \`margin\` support for \`outlook.windows\`: Buggy. \`background-color\` is included inside the \`margin\`.",
      "Note about \`margin\` support for \`outlook.windows\`: Partial. \`auto\` value is not supported.",
      "Note about \`margin\` support for \`outlook.windows-mail\`: Partial. Negative values are not supported.",
      "Note about \`margin\` support for \`outlook.windows-mail\`: Partial. Not supported on \`<span>\` and \`<body>\` elements.",
      "Note about \`margin\` support for \`outlook.windows-mail\`: Buggy. \`background-color\` is included inside the \`margin\`.",
      "Note about \`margin\` support for \`outlook.ios\`: Partial. Negative values are not supported.",
      "Note about \`margin\` support for \`outlook.android\`: Partial. Negative values are not supported.",
      "Note about \`margin\` support for \`mail-ru.desktop-webmail\`: Partial. Negative values are not supported.",
    ],
  },
  {
    "link": "https://www.caniemail.com/features/css-padding/",
    "name": "padding",
    "notes": [
      "Note about \`padding\` support for \`outlook.windows\`: Partial. Only supported on table cells.",
      "Note about \`padding\` support for \`outlook.windows\`: Buggy. Vertical padding will be the same for all cells of a same row, adopting the biggest value.",
      "Note about \`padding\` support for \`outlook.windows-mail\`: Partial. Only supported on table cells.",
      "Note about \`padding\` support for \`outlook.windows-mail\`: Buggy. Vertical padding will be the same for all cells of a same row, adopting the biggest value.",
    ],
  },
  {
    "link": "https://www.caniemail.com/features/css-rgb/",
    "name": "rgb()",
    "notes": [
      "Note about \`rgb()\` support for \`gmail.desktop-webmail\`: Whitespace syntax is not supported (\`rgb(0 128 0 / 1)\`).",
      "Note about \`rgb()\` support for \`gmail.desktop-webmail\`: whitespace syntax (\`rgb(0 128 0)\`): when used in the \`style\` attribute of an element, the whole attribute is stripped. When used inside \`<style>\`, the whole \`<style>\` block is stripped.",
      "Note about \`rgb()\` support for \`gmail.ios\`: Whitespace syntax is not supported (\`rgb(0 128 0 / 1)\`).",
      "Note about \`rgb()\` support for \`gmail.ios\`: whitespace syntax (\`rgb(0 128 0)\`): when used in the \`style\` attribute of an element, the whole attribute is stripped. When used inside \`<style>\`, the whole \`<style>\` block is stripped.",
      "Note about \`rgb()\` support for \`gmail.android\`: Whitespace syntax is not supported (\`rgb(0 128 0 / 1)\`).",
      "Note about \`rgb()\` support for \`gmail.android\`: whitespace syntax (\`rgb(0 128 0)\`): when used in the \`style\` attribute of an element, the whole attribute is stripped. When used inside \`<style>\`, the whole \`<style>\` block is stripped.",
      "Note about \`rgb()\` support for \`gmail.mobile-webmail\`: Whitespace syntax is not supported (\`rgb(0 128 0 / 1)\`).",
      "Note about \`rgb()\` support for \`gmail.mobile-webmail\`: whitespace syntax (\`rgb(0 128 0)\`): when used in the \`style\` attribute of an element, the whole attribute is stripped. When used inside \`<style>\`, the whole \`<style>\` block is stripped.",
      "Note about \`rgb()\` support for \`orange.desktop-webmail\`: Whitespace syntax is not supported (\`rgb(0 128 0 / 1)\`).",
      "Note about \`rgb()\` support for \`orange.desktop-webmail\`: Alpha value is not supported (\`rgb(0, 128, 0, 0.5)\`).",
      "Note about \`rgb()\` support for \`orange.ios\`: Whitespace syntax is not supported (\`rgb(0 128 0 / 1)\`).",
      "Note about \`rgb()\` support for \`orange.ios\`: Alpha value is not supported (\`rgb(0, 128, 0, 0.5)\`).",
      "Note about \`rgb()\` support for \`orange.android\`: Whitespace syntax is not supported (\`rgb(0 128 0 / 1)\`).",
      "Note about \`rgb()\` support for \`orange.android\`: Alpha value is not supported (\`rgb(0, 128, 0, 0.5)\`).",
      "Note about \`rgb()\` support for \`outlook.windows\`: Whitespace syntax is not supported (\`rgb(0 128 0 / 1)\`).",
      "Note about \`rgb()\` support for \`outlook.windows\`: Alpha value is not supported (\`rgb(0, 128, 0, 0.5)\`).",
      "Note about \`rgb()\` support for \`outlook.windows-mail\`: Whitespace syntax is not supported (\`rgb(0 128 0 / 1)\`).",
      "Note about \`rgb()\` support for \`outlook.windows-mail\`: Alpha value is not supported (\`rgb(0, 128, 0, 0.5)\`).",
      "Note about \`rgb()\` support for \`yahoo.desktop-webmail\`: Whitespace syntax is not supported (\`rgb(0 128 0 / 1)\`).",
      "Note about \`rgb()\` support for \`yahoo.ios\`: Whitespace syntax is not supported (\`rgb(0 128 0 / 1)\`).",
      "Note about \`rgb()\` support for \`yahoo.android\`: Whitespace syntax is not supported (\`rgb(0 128 0 / 1)\`).",
      "Note about \`rgb()\` support for \`aol.desktop-webmail\`: Whitespace syntax is not supported (\`rgb(0 128 0 / 1)\`).",
      "Note about \`rgb()\` support for \`aol.ios\`: Whitespace syntax is not supported (\`rgb(0 128 0 / 1)\`).",
      "Note about \`rgb()\` support for \`aol.android\`: Whitespace syntax is not supported (\`rgb(0 128 0 / 1)\`).",
    ],
  },
  {
    "link": "https://www.caniemail.com/features/css-text-align/",
    "name": "text-align",
    "notes": [
      "Note about \`text-align\` support for \`gmail.ios\`: Partial. Flow-relative values \`start\` and \`end\` are not supported with non Gmail account.",
      "Note about \`text-align\` support for \`gmail.android\`: Partial. Flow-relative values \`start\` and \`end\` are not supported with non Gmail account.",
      "Note about \`text-align\` support for \`orange.desktop-webmail\`: Partial. Flow-relative values \`start\` and \`end\` are not supported.",
      "Note about \`text-align\` support for \`orange.ios\`: Partial. Flow-relative values \`start\` and \`end\` are not supported.",
      "Note about \`text-align\` support for \`orange.android\`: Partial. Flow-relative values \`start\` and \`end\` are not supported.",
      "Note about \`text-align\` support for \`outlook.windows\`: Partial. Flow-relative values \`start\` and \`end\` are not supported.",
      "Note about \`text-align\` support for \`outlook.windows-mail\`: Partial. Flow-relative values \`start\` and \`end\` are not supported.",
      "Note about \`text-align\` support for \`yahoo.desktop-webmail\`: Partial. Flow-relative values \`start\` and \`end\` are not supported.",
      "Note about \`text-align\` support for \`yahoo.ios\`: Partial. Flow-relative values \`start\` and \`end\` are not supported.",
      "Note about \`text-align\` support for \`yahoo.android\`: Partial. Flow-relative values \`start\` and \`end\` are not supported.",
      "Note about \`text-align\` support for \`aol.desktop-webmail\`: Partial. Flow-relative values \`start\` and \`end\` are not supported.",
      "Note about \`text-align\` support for \`aol.ios\`: Partial. Flow-relative values \`start\` and \`end\` are not supported.",
      "Note about \`text-align\` support for \`aol.android\`: Partial. Flow-relative values \`start\` and \`end\` are not supported.",
    ],
  },
  {
    "link": "https://www.caniemail.com/features/css-text-indent/",
    "name": "text-indent",
    "notes": [
      "Note about \`text-indent\` support for \`gmail.desktop-webmail\`: Partial. Negative values are not supported.",
      "Note about \`text-indent\` support for \`gmail.ios\`: Partial. Negative values are not supported.",
      "Note about \`text-indent\` support for \`gmail.android\`: Partial. Negative values are not supported.",
      "Note about \`text-indent\` support for \`gmail.mobile-webmail\`: Partial. Negative values are not supported.",
      "Note about \`text-indent\` support for \`yahoo.desktop-webmail\`: Partial. Negative values are not supported.",
      "Note about \`text-indent\` support for \`yahoo.ios\`: Partial. Negative values are not supported.",
      "Note about \`text-indent\` support for \`yahoo.android\`: Partial. Negative values are not supported.",
      "Note about \`text-indent\` support for \`aol.desktop-webmail\`: Partial. Negative values are not supported.",
      "Note about \`text-indent\` support for \`aol.ios\`: Partial. Negative values are not supported.",
      "Note about \`text-indent\` support for \`aol.android\`: Partial. Negative values are not supported.",
      "Note about \`text-indent\` support for \`mail-ru.desktop-webmail\`: Partial. Hard-coded negative values are not supported, but negative values as a result of the \`calc()\` function are supported.",
    ],
  },
  {
    "link": "https://www.caniemail.com/features/css-text-transform/",
    "name": "text-transform",
    "notes": [
      "Note about \`text-transform\` support for \`outlook.windows\`: Partial. \`lowercase\` value is not supported.",
      "Note about \`text-transform\` support for \`outlook.windows-mail\`: Partial. \`lowercase\` value is not supported.",
    ],
  },
  {
    "link": "https://www.caniemail.com/features/css-unit-cm/",
    "name": "cm unit",
    "notes": undefined,
  },
  {
    "link": "https://www.caniemail.com/features/css-unit-em/",
    "name": "em unit",
    "notes": undefined,
  },
  {
    "link": "https://www.caniemail.com/features/css-unit-ex/",
    "name": "ex unit",
    "notes": undefined,
  },
  {
    "link": "https://www.caniemail.com/features/css-unit-in/",
    "name": "in unit",
    "notes": undefined,
  },
  {
    "link": "https://www.caniemail.com/features/css-unit-mm/",
    "name": "mm unit",
    "notes": undefined,
  },
  {
    "link": "https://www.caniemail.com/features/css-unit-pc/",
    "name": "pc unit",
    "notes": undefined,
  },
  {
    "link": "https://www.caniemail.com/features/css-unit-percent/",
    "name": "% unit",
    "notes": undefined,
  },
  {
    "link": "https://www.caniemail.com/features/css-unit-pt/",
    "name": "pt unit",
    "notes": undefined,
  },
  {
    "link": "https://www.caniemail.com/features/css-unit-px/",
    "name": "px unit",
    "notes": undefined,
  },
  {
    "link": "https://www.caniemail.com/features/css-vertical-align/",
    "name": "vertical-align",
    "notes": undefined,
  },
  {
    "link": "https://www.caniemail.com/features/css-width/",
    "name": "width property",
    "notes": [
      "Note about \`width property\` support for \`outlook.windows\`: Buggy. Percentage width on \`<img>\` elements are based on the physical file's width, not on the parent element's width.",
      "Note about \`width property\` support for \`outlook.windows\`: Partial. Not supported on \`<body>\`, \`<span>\`, \`<div>\` or \`<p>\` elements.",
      "Note about \`width property\` support for \`laposte.desktop-webmail\`: Buggy. The webmail has a generic style that sets \`table { width:inherit; }\`.",
    ],
  },
  {
    "link": "https://www.caniemail.com/features/html-align/",
    "name": "align attribute",
    "notes": [
      "Note about \`align attribute\` support for \`protonmail.desktop-webmail\`: Partial. \`<img>\` elements are wrapped in a \`<span>\` so \`left\` and \`right\` values have no effect.",
      "Note about \`align attribute\` support for \`hey.desktop-webmail\`: Partial. Not supported on \`<img>\` elements.",
    ],
  },
  {
    "link": "https://www.caniemail.com/features/html-blockquote/",
    "name": "<blockquote> element",
    "notes": [
      "Note about \`<blockquote> element\` support for \`hey.desktop-webmail\`: Buggy. Blockquote elements are nested in a \`<details>\` element.",
    ],
  },
  {
    "link": "https://www.caniemail.com/features/html-del/",
    "name": "<del> element",
    "notes": [
      "Note about \`<del> element\` support for \`gmail.ios\`: Partial. Not supported with non Gmail accounts.",
      "Note about \`<del> element\` support for \`gmail.android\`: Partial. Not supported with non Gmail accounts.",
    ],
  },
  {
    "link": "https://www.caniemail.com/features/html-dir/",
    "name": "dir attribute",
    "notes": [
      "Note about \`dir attribute\` support for \`gmail.mobile-webmail\`: Buggy. The client applies an \`rtl\` direction to the entire email if it contains text in a \`rtl\` language.",
      "Note about \`dir attribute\` support for \`orange.desktop-webmail\`: Partial. Removed from \`<table>\` and \`<td>\` elements.",
      "Note about \`dir attribute\` support for \`outlook.windows\`: Buggy on anchor \`<a>\` tags.",
      "Note about \`dir attribute\` support for \`outlook.windows-mail\`: Buggy on anchor \`<a>\` tags.",
    ],
  },
  {
    "link": "https://www.caniemail.com/features/html-div/",
    "name": "<div> element",
    "notes": undefined,
  },
  {
    "link": "https://www.caniemail.com/features/html-h1-h6/",
    "name": "<h1> to <h6> elements",
    "notes": undefined,
  },
  {
    "link": "https://www.caniemail.com/features/html-lists/",
    "name": "<ul>, <ol> and <dl>",
    "notes": undefined,
  },
  {
    "link": "https://www.caniemail.com/features/html-p/",
    "name": "<p> element",
    "notes": undefined,
  },
  {
    "link": "https://www.caniemail.com/features/html-span/",
    "name": "<span> element",
    "notes": undefined,
  },
  {
    "link": "https://www.caniemail.com/features/html-strong/",
    "name": "<strong> element",
    "notes": undefined,
  },
  {
    "link": "https://www.caniemail.com/features/html-table/",
    "name": "<table> element",
    "notes": undefined,
  },
  {
    "link": "https://www.caniemail.com/features/html-valign/",
    "name": "valign attribute",
    "notes": undefined,
  },
  {
    "link": "https://www.caniemail.com/features/image-bmp/",
    "name": "BMP image format",
    "notes": [
      "Note about \`BMP image format\` support for \`gmail.desktop-webmail\`: Buggy. An image renders but the colours are incorrect.",
      "Note about \`BMP image format\` support for \`gmail.android\`: Buggy. An image renders but the colours are incorrect.",
      "Note about \`BMP image format\` support for \`gmail.mobile-webmail\`: Buggy. An image renders but the colours are incorrect.",
    ],
  },
  {
    "link": "https://www.caniemail.com/features/image-gif/",
    "name": "GIF image format",
    "notes": [
      "Note about \`GIF image format\` support for \`outlook.windows\`: Partial: Does not support animated gif images.",
      "Note about \`GIF image format\` support for \`outlook.windows\`: Partial: With an Office 365 account, it plays the animation 3 times then stops and shows a play button to reactivate the animation.",
    ],
  },
  {
    "link": "https://www.caniemail.com/features/image-jpg/",
    "name": "JPG image format",
    "notes": undefined,
  },
  {
    "link": "https://www.caniemail.com/features/image-png/",
    "name": "PNG image format",
    "notes": undefined,
  },
]
`;

exports[`doIUseEmail() works > parses inline CSS 1`] = `
{
  "notes": [
    "Note about \`<body> element\` support for \`gmail.desktop-webmail\`: Partial. Replaced by a \`<div>\` with supported attributes.",
    "Note about \`<body> element\` support for \`gmail.ios\`: Partial. Replaced by a \`<div>\` with supported attributes.",
    "Note about \`<body> element\` support for \`gmail.android\`: Partial. Replaced by a \`<div>\` with supported attributes.",
    "Note about \`<body> element\` support for \`gmail.mobile-webmail\`: Partial. Replaced by a \`<div>\` with supported attributes.",
  ],
  "success": true,
  "warnings": [
    "\`<body> element\` is only partially supported by \`gmail.desktop-webmail\`",
    "\`<body> element\` is only partially supported by \`gmail.ios\`",
    "\`<body> element\` is only partially supported by \`gmail.android\`",
    "\`<body> element\` is only partially supported by \`gmail.mobile-webmail\`",
  ],
}
`;

exports[`doIUseEmail() works > should fail on unsupported <style> features 1`] = `
{
  "errors": [
    "\`filter\` is not supported by \`gmail.desktop-webmail\`",
  ],
  "notes": [
    "Note about \`<body> element\` support for \`gmail.desktop-webmail\`: Partial. Replaced by a \`<div>\` with supported attributes.",
  ],
  "success": false,
  "warnings": [
    "\`<body> element\` is only partially supported by \`gmail.desktop-webmail\`",
  ],
}
`;

exports[`doIUseEmail() works > should fail on unsupported inline-style features 1`] = `
{
  "errors": [
    "\`flex-direction:column\` is not supported by \`gmail.desktop-webmail\`",
  ],
  "notes": [
    "Note about \`<body> element\` support for \`gmail.desktop-webmail\`: Partial. Replaced by a \`<div>\` with supported attributes.",
  ],
  "success": false,
  "warnings": [
    "\`<body> element\` is only partially supported by \`gmail.desktop-webmail\`",
  ],
}
`;

exports[`doIUseEmail() works > should fail with unsupported element-attribute pairs 1`] = `
{
  "errors": [
    "\`Local anchors\` is not supported by \`gmail.ios\`",
  ],
  "notes": [
    "Note about \`<body> element\` support for \`gmail.ios\`: Partial. Replaced by a \`<div>\` with supported attributes.",
    "Note about \`Local anchors\` support for \`gmail.ios\`: Buggy. Clicking an anchor link does nothing.",
  ],
  "success": false,
  "warnings": [
    "\`<body> element\` is only partially supported by \`gmail.ios\`",
  ],
}
`;

exports[`doIUseEmail() works > should fail with unsupported element-attribute pairs 2`] = `
{
  "errors": [
    "\`display:flex\` is not supported by \`outlook.windows\`",
  ],
  "notes": [
    "Note about \`display\` support for \`outlook.windows\`: Buggy. \`display:none\` does not inherit to inner tables.",
    "Note about \`display\` support for \`outlook.windows\`: Partial. Only supports \`display:none\` (but not on \`<img>\`).",
  ],
  "success": false,
  "warnings": [
    "\`display\` is only partially supported by \`outlook.windows\`",
  ],
}
`;

exports[`doIUseEmail() works > should work with selectors 1`] = `
{
  "notes": [
    "Note about \`Attribute selector\` support for \`gmail.desktop-webmail\`: Partial. Only supports \`[attr~=value]\` syntax.",
    "Note about \`<body> element\` support for \`gmail.desktop-webmail\`: Partial. Replaced by a \`<div>\` with supported attributes.",
  ],
  "success": true,
  "warnings": [
    "\`Attribute selector\` is only partially supported by \`gmail.desktop-webmail\`",
    "\`<body> element\` is only partially supported by \`gmail.desktop-webmail\`",
  ],
}
`;

exports[`doIUseEmail() works > works with blank email template 1`] = `
{
  "notes": [
    "Note about \`<body> element\` support for \`gmail.desktop-webmail\`: Partial. Replaced by a \`<div>\` with supported attributes.",
    "Note about \`<body> element\` support for \`gmail.ios\`: Partial. Replaced by a \`<div>\` with supported attributes.",
    "Note about \`<body> element\` support for \`gmail.android\`: Partial. Replaced by a \`<div>\` with supported attributes.",
    "Note about \`<body> element\` support for \`gmail.mobile-webmail\`: Partial. Replaced by a \`<div>\` with supported attributes.",
  ],
  "success": true,
  "warnings": [
    "\`<body> element\` is only partially supported by \`gmail.desktop-webmail\`",
    "\`<body> element\` is only partially supported by \`gmail.ios\`",
    "\`<body> element\` is only partially supported by \`gmail.android\`",
    "\`<body> element\` is only partially supported by \`gmail.mobile-webmail\`",
  ],
}
`;

exports[`doIUseEmail() works > works with empty styles 1`] = `
{
  "notes": [],
  "success": true,
  "warnings": [],
}
`;
